--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: I Need A Title
+title: Wisq.net
 email: nobody@wisq.net
-description: "I need a description too!"
+description: "Videogame adventures, high tech musings, and general mayhem."
 baseurl: ""
 url: "http://wisq.github.io"
 twitter_username: wisqnet
