--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Wisq.net
 email: nobody@wisq.net
-description: "Videogame adventures, high tech musings, and general mayhem."
+description: "Gaming adventures, high tech musings, and general mayhem."
 baseurl: ""
 url: "http://wisq.github.io"
 twitter_username: wisqnet
