--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@ markdown: kramdown
 highlighter: pygments
 permalink: pretty
 paginate: 5
-exclude: ["node_modules"]
+exclude:
+  - node_modules
+  - "s3_website.yml"
 gems:
   - jekyll-sitemap
 
