--- a/s3_website.yml
+++ b/s3_website.yml
@@ -9,8 +9,11 @@ cloudfront_distribution_id: E207AK80NEVLR9
 # site: path-to-your-website
 
 max_age:
-  "img/*": 3600
-  "css/local.css": 300
+  "img/*": 86400
+  "js/local.js": 600
+  "js/*":  86400
+  "css/local.css": 600
+  "css/*": 86400
   "*": 600
 
 gzip:
