Change main URL to use www.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Wisq.net
 email: nobody@wisq.net
 description: "Gaming adventures, high tech musings, and general mayhem."
 baseurl: ""
-url: "https://wisq.net"
+url: "https://www.wisq.net"
 twitter_username: wisqnet
 github_username:  wisq
 #facebook_username: NotGonnaHappen
